WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238359
Mismatched forward declaration of GraphicsContextState
https://bugs.webkit.org/show_bug.cgi?id=238359
Summary
Mismatched forward declaration of GraphicsContextState
Don Olmstead
Reported
2022-03-24 17:35:29 PDT
Its a class not a struct
Attachments
Patch
(1.09 KB, patch)
2022-03-24 17:37 PDT
,
Don Olmstead
darin
: review+
Details
Formatted Diff
Diff
Patch
(1.13 KB, patch)
2022-03-24 17:51 PDT
,
Don Olmstead
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Don Olmstead
Comment 1
2022-03-24 17:37:32 PDT
Created
attachment 455711
[details]
Patch
Darin Adler
Comment 2
2022-03-24 17:48:47 PDT
Comment on
attachment 455711
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=455711&action=review
> Source/WebCore/platform/graphics/cairo/CairoOperations.h:51 > +class GraphicsContextState;
Should sort in with other class forward declarations above and merge into that paragraph.
Don Olmstead
Comment 3
2022-03-24 17:51:08 PDT
Created
attachment 455715
[details]
Patch
Don Olmstead
Comment 4
2022-03-24 17:51:27 PDT
(In reply to Darin Adler from
comment #2
)
> Comment on
attachment 455711
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=455711&action=review
> > > Source/WebCore/platform/graphics/cairo/CairoOperations.h:51 > > +class GraphicsContextState; > > Should sort in with other class forward declarations above and merge into > that paragraph.
Good catch! Patch updated
EWS
Comment 5
2022-03-25 00:44:49 PDT
Committed
r291850
(
248862@main
): <
https://commits.webkit.org/248862@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 455715
[details]
.
Radar WebKit Bug Importer
Comment 6
2022-03-25 00:45:18 PDT
<
rdar://problem/90823281
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug