Mismatched forward declaration of GraphicsContextState https://bugs.webkit.org/show_bug.cgi?id=238359

Reviewed by Darin Adler.

Forward declaration should be for a class not a struct. Fixes a warning.

* platform/graphics/cairo/CairoOperations.h:



Canonical link: https://commits.webkit.org/248862@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291850 268f45cc-cd09-0410-ab3c-d52691b4dbfc