Source/WebCore/platform/graphics/cairo/CairoOperations.h
@@ -46,9 +46,8 @@ class Color;
 class FloatRect;
 class FloatRoundedRect;
 class FloatSize;
+class GraphicsContextState;
 class Path;
-
-struct GraphicsContextState;
 
 namespace Cairo {
 
